# EmbodiedLab

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CLAUDE.md  Makefile  Procfile  README.md  package-lock.json  package.json  payload.json  pyproject.toml  requirements-api.txt  requirements-job.txt  requirements.txt
.claude/: README.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: claude-code-review.yml  claude.yml
docs/: data-models.md  development.md
docs/implementation/: current-architecture.md  data-models.md  development.md  envforge-integration-roadmap.md  envforge-phase-3-fixture-validation.md  envforge-phase-4-replay-log-contract.md  phase-1-contract-preparation.md  subagent-workflow.md  unity-sdk-roadmap.md
docs/vision/: product-direction.md
embodiedlab/: __init__.py  api_models.py  config_utils.py  continuous_navigation_env.py  gridworld_env.py  repositories.py  result_events.py  result_models.py  schemas.py
embodiedlab/training/: __init__.py  navigation_final_expert.py  navigation_final_policy.py  replay_bundle.py  runner.py  training_config.py  training_converter.py  training_models.py
notification/: Dockerfile  __init__.py  main.py  pubsub.py  registry.py
rules/: coding-style.md  command.md
server/: Dockerfile  __init__.py  config.py  dependencies.py  main.py  repositories.py  routes.py
server/services/: __init__.py  cancellation_tokens.py  cancellations.py  execution_failures.py  execution_reconciliation.py  jobs.py  results.py  submissions.py  training_requests.py
tests/: fakes.py  test_artifacts.py  test_continuous_navigation_env.py  test_contract_schemas.py  test_fakes.py  test_navigation_final_policy.py  test_notification_app.py  test_progress.py  test_replay_bundle.py  test_result_models.py  test_schemas.py  test_server_app.py  test_server_jobs.py  test_server_repositories.py  test_trainer_job.py  test_training_converter.py  test_training_runner.py  test_training_service.py
tests/fixtures/envforge/: navigation_default_scenario_bundle.json
tools/: __init__.py  export_contract_schemas.py  ws_client.py
trainer/: Dockerfile  Dockerfile.job  __init__.py  artifacts.py  config.py  job.py  logging_utils.py  main.py  progress.py  pubsub.py  repositories.py  results.py  training_service.py  transitions.py
